@@ -1,6 +1,7 @@
 2007-03-06 Ingo Renner <typo3@ingo-renner.com>
 
-	* RMV 0002491: Remove commented-out code from the kickstarter, thanks to Peter Foerger and Oliver Klee
+	* RMV 0002491: Remove commented-out code from the kickstarter, thanks to Oliver Klee and Peter Foerger 
+	* ADD 0004539: Manage flex fields, thanks to Jean-Baptiste Rio and Peter foerger
 
 
 2007-02-22 Ingo Renner <typo3@ingo-renner.com>
